GitOps/auth-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  namespace: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: 550829113486.dkr.ecr.us-east-1.amazonaws.com/auth-service:sha-17da9ccb9c73
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8001
        startupProbe:
          httpGet:
            path: /health
            port: 8001
          periodSeconds: 5
          failureThreshold: 6
